
EXTRA_DIST=	\
	LinkGrammarExe.vcproj \
	LinkGrammarExe.vcxproj \
	LinkGrammarExe.vcxproj.filters \
	LinkGrammarJava.vcproj \
	LinkGrammarJava.vcxproj \
	LinkGrammarJava.vcxproj.filters \
	LinkGrammar.sln \
	LinkGrammar.vcproj \
	LinkGrammar.vcxproj \
	LinkGrammar.vcxproj.filters \
	LinkGrammar.vcxproj.user \
	README

