#
# Makefile for python examples
#
# Created by Linas Vepstas February 2014
#

# Run tests.py if the user says 'make check'
TESTS = tests.py
TESTS_ENVIRONMENT = PYTHONPATH=../python/.libs LINK_GRAMMAR_DATA=../../data

EXTRA_DIST =         \
   AUTHORS           \
   LICENSE           \
   README.md         \
   example.py        \
   parses-en.txt     \
   parses-lt.txt     \
   tests.py

