SUBDIRS=words

DICTS=					         \
	4.0.affix                  \
	4.0.batch                  \
	4.0.biolg.batch            \
	4.0.enwiki.batch           \
	4.0.fixes.batch            \
	4.0.voa.batch              \
	4.0.constituent-knowledge  \
	4.0.dict                   \
	4.0.knowledge              \
	4.0.regex                  \
	tiny.dict

dictdir=$(pkgdatadir)/en
dict_DATA = $(DICTS)

EXTRA_DIST = $(DICTS) 4.0.dict.m4
